[package]
name = "snatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.15.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
futures = "0.3.0"
failure = "0.1.8"
reqwest = "0.12.5"
serde_bencode = "^0.2.4"
serde = "^1.0.0"
serde_derive = "^1.0.0"
log = "0.4.22"
env_logger = "0.11.3"
regex = "1.10.5"
confy = "0.6.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true